--- a/qrgen/index.html
+++ b/qrgen/index.html
@@ -8,7 +8,7 @@
   <script src="qr.js"></script>
 </head>
 <body>
-  QR Cord Generator!!!
+  QR Cord Generator!!!!!
   <main><!-- スケッチはここ --></main>
   URL<input id="url" type="text"><br>
   Color<input id="color" type="color"><br>
