トップページを修正

--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-hello
-<a href="qrgen">QR Code Generator</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <h1>Welcome</h1>
+    <a href="qrgen">QR Code Generator</a><br>
+    <a href="paint">Paint</a><br>
+    <a href="clock">Clock</a><br>
+</body>
+</html>
