スイカゲーム

--- a/physics/index.html
+++ b/physics/index.html
@@ -8,6 +8,6 @@
   <script src="matter.min.js"></script>
 </head>
 <body>
-  <script src="sketch.js"></script>
+  <script type="module" src="sketch.js"></script>
 </body>
 </html>
